--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div id="content">
 			<div id="chuxiao">出校</div>
 			<img src="./img/11.jpg" id="pic">
-			<div id="name">袁梦曦-201938020611</div>
+			<div id="name">陈熙枸-201938060233</div>
 			<hr>
 			<div>学生:白名单验证通过,该申请离校扫码1次,离校码只能使用一次,请不要重复打开</div>
 			<p id="Main">09-29</p>
@@ -26,7 +26,7 @@
 			}			
 			#name{
 				font-size:16px;
-				margin-top:-25px;
+				margin-top:-30px;
 			}
 			hr{
 				border:none;
